Updated sidebar buttons

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="sidebar">
 
     <section class="task-input-section">
-      <h2>Add Assignment</h2>
+      <h2>Add Task</h2>
       <input type="text" id="task-input" placeholder="Task name...">
       <input type="date" id="due-date-input">
-      <button id="add-task-btn">Add Assignment</button>
+      <button id="add-task-btn">Add task</button>
     </section>
 
     <section class="task-lists-section">
