updated grade calculator placeholder and updated grade calculator styling

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h2>Grade Calculator</h2>
     <select id="grade-course-name">
     </select>
-    <input type="text" id="assignment-name" placeholder="Assignment/Exam name...">
+    <input type="text" id="assignment-name" placeholder="Graded item name...">
     <input type="number" id="grade-received" placeholder="Grade received...">
     <input type="number" id="weight" placeholder="Weight (%)...">
     <button id="add-grade-btn">Add Grade</button>
