implemented a dark/light mode button with transition

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
   <div class="header">
     <h1>Course Tracker</h1>
-    </div>
-
+    <button id="theme-toggle" aria-label="Toggle light/dark mode">
+      <i class="fas fa-moon"></i>
+    </button>
+  </div>
   <div class="sidebar">
 
     <section class="task-input-section">
