--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <div id="task-details-modal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>Task Details</h2>
+      <h2 id="task-details-header">Task Details</h2>
       <textarea id="task-notes" placeholder="Add notes..."></textarea>
       <button id="save-task-notes">Save</button>
     </div>
